--- a/bootlogin.html
+++ b/bootlogin.html
@@ -62,7 +62,12 @@
   <input type='file' onchange="readURL(this);" />
   <img id="prof" src="http://placehold.it/180" alt="your image" />
   <form class="form-horizontal" action="/action_page.php">
-  
+  <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Name:</label>
+      <div class="col-sm-10">
+        <input type="name" class="form-control" id="nam" placeholder="Enter name" name="nam">
+      </div>
+    </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
